--- a/index.html
+++ b/index.html
@@ -4,8 +4,33 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Market Masters</title>
+  <link rel="stylesheet" href="src/styles/style.css">
 </head>
 <body>
-  
+  <header>
+    <nav class="nav">
+      <a href="index.html" data-lang-en="Home" data-lang-ua="Головна">Home</a> |
+      <a href="src/pages/about.html" data-lang-en="About" data-lang-ua="Про нас">About</a> |
+      <a href="src/pages/games.html" data-lang-en="Games" data-lang-ua="Гри">Games</a> |
+      <a href="src/pages/news.html" data-lang-en="News" data-lang-ua="Новини">News</a>
+      <div class="user-controls">
+        <a href="src/pages/user.html" data-lang-en="User" data-lang-ua="Користувач">User</a>
+        <button id="language-toggle">EN/UA</button>
+      </div>
+    </nav>
+  </header>
+  <main class="main">
+    <h1 data-lang-en="Market Masters" data-lang-ua="Майстри Ринку">Market Masters</h1>
+    <div class="container" id="content">
+      <!-- Content will be loaded here -->
+    </div>
+  </main>
+  <footer class="footer">
+    <a href="index.html" data-lang-en="Home" data-lang-ua="Головна">Home</a> |
+    <a href="src/pages/about.html" data-lang-en="About" data-lang-ua="Про нас">About</a> |
+    <a href="src/pages/games.html" data-lang-en="Games" data-lang-ua="Гри">Games</a> |
+    <a href="src/pages/news.html" data-lang-en="News" data-lang-ua="Новини">News</a>
+  </footer>
+  <script src="main.js"></script>
 </body>
 </html>
