--- a/src/contents/news-content-en.html
+++ b/src/contents/news-content-en.html
@@ -1,4 +1,7 @@
 <div>
   <h2>Latest News</h2>
-  <p>This is the news page content in English.</p>
+  <article>
+    <h2>New Game Release: Market</h2>
+    <p>We are excited to announce the release of our new game, Market. In this game, you will manage your own market, buy and sell goods, and try to make a profit. Start playing now!</p>
+  </article>
 </div>
