--- a/src/contents/news-content-ua.html
+++ b/src/contents/news-content-ua.html
@@ -1,4 +1,7 @@
 <div>
   <h2>Останні новини</h2>
-  <p>Це контент сторінки "Останні новини" українською мовою.</p>
+  <article>
+    <h2>Вихід нової гри: Ринок</h2>
+    <p>Ми раді оголосити про вихід нашої нової гри, Ринок. У цій грі ви будете керувати власним ринком, купувати та продавати товари, і намагатися отримати прибуток. Почніть грати зараз!</p>
+  </article>
 </div>
