--- a/src/pages/games.html
+++ b/src/pages/games.html
@@ -24,6 +24,10 @@
     <div class="container" id="content">
       <!-- Content will be loaded here -->
     </div>
+    <div class="container">
+      <button id="start-market-game" data-lang-en="Start Market Game" data-lang-ua="Почати гру Ринок">Start Market Game</button>
+    </div>
+    
   </main>
   <footer class="footer">
     <a href="../../index.html" data-lang-en="Home" data-lang-ua="Головна">Home</a> |
@@ -31,6 +35,7 @@
     <a href="games.html" data-lang-en="Games" data-lang-ua="Гри">Games</a> |
     <a href="news.html" data-lang-en="News" data-lang-ua="Новини">News</a>
   </footer>
+  <script src="../scripts/game.js"></script>
   <script src="../../main.js"></script>
 </body>
 </html>
