Enhance Market Game with multilingual support and content updates

--- a/src/pages/games/market.html
+++ b/src/pages/games/market.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Market Game - Market Masters</title>
+  <title data-lang-en="Market Game - Market Masters" data-lang-ua="Гра Ринок - Майстри Ринку">Market Game - Market Masters</title>
   <link rel="stylesheet" href="../../styles/style.css">
 </head>
 <body>
@@ -23,15 +23,15 @@
     <h1 data-lang-en="Market Game" data-lang-ua="Гра Ринок">Market Game</h1>
     <div class="container">
       <div id="game">
-        <div id="balance">Balance: £5000</div>
+        <div id="balance" data-lang-en="Balance: £5000" data-lang-ua="Баланс: £5000">Balance: £5000</div>
         <div id="market">
-          <h2>Market</h2>
+          <h2 data-lang-en="Market" data-lang-ua="Ринок">Market</h2>
           <div id="products">
             <!-- Products will be listed here -->
           </div>
         </div>
         <div id="warehouse">
-          <h2>Warehouse</h2>
+          <h2 data-lang-en="Warehouse" data-lang-ua="Склад">Warehouse</h2>
           <div id="inventory">
             <!-- Inventory will be listed here -->
           </div>
@@ -46,5 +46,6 @@
     <a href="../news.html" data-lang-en="News" data-lang-ua="Новини">News</a>
   </footer>
   <script src="../../scripts/market.js"></script>
+  <script src="../../../main.js"></script>
 </body>
 </html>
