--- a/src/pages/news.html
+++ b/src/pages/news.html
@@ -4,6 +4,12 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>News - Market Masters</title>
+  <!-- Favicon -->
+  <link rel="manifest" href="../favicon/site.webmanifest">
+  <link rel="icon" href="../favicon/favicon.ico" sizes="any">
+  <link rel="icon" href="../favicon/favicon-32x32.png" sizes="32x32" type="image/png">
+  <link rel="icon" href="../favicon/favicon-16x16.png" sizes="16x16" type="image/png">
+  <link rel="apple-touch-icon" href="../favicon/apple-touch-icon.png">
   <link rel="stylesheet" href="../styles/style.css">
 </head>
 <body>
