--- a/index.html
+++ b/index.html
@@ -11,6 +11,9 @@
   <link rel="icon" href="src/favicon/favicon-32x32.png" sizes="32x32" type="image/png">
   <link rel="icon" href="src/favicon/favicon-16x16.png" sizes="16x16" type="image/png">
   <link rel="apple-touch-icon" href="src/favicon/apple-touch-icon.png">
+  <!-- Theme color and MS tile -->
+  <meta name="theme-color" content="#ffffff">
+  <meta name="msapplication-TileColor" content="#ffffff">
   <link rel="stylesheet" href="src/styles/style.css">
 </head>
 <body>
