--- a/src/pages/register.html
+++ b/src/pages/register.html
@@ -10,6 +10,9 @@
   <link rel="icon" href="../favicon/favicon-32x32.png" sizes="32x32" type="image/png">
   <link rel="icon" href="../favicon/favicon-16x16.png" sizes="16x16" type="image/png">
   <link rel="apple-touch-icon" href="../favicon/apple-touch-icon.png">
+  <!-- Theme color and MS tile -->
+  <meta name="theme-color" content="#ffffff">
+  <meta name="msapplication-TileColor" content="#ffffff">
   <link rel="stylesheet" href="../styles/style.css">
 </head>
 <body>
