--- a/index.html
+++ b/index.html
@@ -6,11 +6,11 @@
   <meta name="description" content="Market Masters — економічна гра про торгівлю й ринки">
   <title>Market Masters</title>
   <!-- Favicon -->
-  <link rel="manifest" href="src/favicon/site.webmanifest">
-  <link rel="icon" href="src/favicon/favicon.ico" sizes="any">
-  <link rel="icon" href="src/favicon/favicon-32x32.png" sizes="32x32" type="image/png">
-  <link rel="icon" href="src/favicon/favicon-16x16.png" sizes="16x16" type="image/png">
-  <link rel="apple-touch-icon" href="src/favicon/apple-touch-icon.png">
+  <link rel="manifest" href="/favicon/site.webmanifest">
+  <link rel="icon" href="/favicon/favicon.ico" sizes="any">
+  <link rel="icon" href="/favicon/favicon-32x32.png" sizes="32x32" type="image/png">
+  <link rel="icon" href="/favicon/favicon-16x16.png" sizes="16x16" type="image/png">
+  <link rel="apple-touch-icon" href="/favicon/apple-touch-icon.png">
   <!-- Theme color and MS tile -->
   <meta name="theme-color" content="#ffffff">
   <meta name="msapplication-TileColor" content="#ffffff">
