--- a/src/pages/about.html
+++ b/src/pages/about.html
@@ -18,13 +18,15 @@
 <body>
   <header>
     <nav class="nav">
-      <a href="../../index.html" data-lang-en="Home" data-lang-ua="Головна">Home</a> |
-      <a href="about.html" data-lang-en="About" data-lang-ua="Про нас">About</a> |
-      <a href="games.html" data-lang-en="Games" data-lang-ua="Гри">Games</a> |
-      <a href="news.html" data-lang-en="News" data-lang-ua="Новини">News</a>
-      <div class="user-controls">
-        <a href="user.html" data-lang-en="User" data-lang-ua="Користувач">User</a>
-        <button id="language-toggle">EN/UA</button>
+      <div class="container">
+        <button id="nav-toggle" aria-expanded="false" aria-label="Toggle navigation">☰</button>
+        <ul>
+          <li><a href="../../index.html" data-lang-en="Home" data-lang-ua="Головна">Home</a></li>
+          <li><a href="about.html" data-lang-en="About" data-lang-ua="Про нас">About</a></li>
+          <li><a href="games.html" data-lang-en="Games" data-lang-ua="Гри">Games</a></li>
+          <li><a href="news.html" data-lang-en="News" data-lang-ua="Новини">News</a></li>
+          <li class="user-controls"><a href="user.html" data-lang-en="User" data-lang-ua="Користувач">User</a><button id="language-toggle">EN/UA</button></li>
+        </ul>
       </div>
     </nav>
   </header>
