--- a/index.html
+++ b/index.html
@@ -20,10 +20,10 @@
 </head>
 <body>
   <header>
-    <nav class="nav">
+    <nav class="nav" role="navigation" aria-label="Main navigation">
       <div class="container">
-        <button id="nav-toggle" aria-expanded="false" aria-label="Toggle navigation">☰</button>
-        <ul>
+        <button id="nav-toggle" aria-expanded="false" aria-controls="nav-list" aria-label="Toggle navigation">☰</button>
+        <ul id="nav-list">
         <li>
           <a href="index.html" data-lang-en="Home" data-lang-ua="Головна">Home</a>
         </li>
