--- a/src/pages/news.html
+++ b/src/pages/news.html
@@ -17,10 +17,10 @@
 </head>
 <body>
   <header>
-    <nav class="nav">
+    <nav class="nav" role="navigation" aria-label="Main navigation">
       <div class="container">
-        <button id="nav-toggle" aria-expanded="false" aria-label="Toggle navigation">☰</button>
-        <ul>
+        <button id="nav-toggle" aria-expanded="false" aria-controls="nav-list" aria-label="Toggle navigation">☰</button>
+        <ul id="nav-list">
           <li><a href="../../index.html" data-lang-en="Home" data-lang-ua="Головна">Home</a></li>
           <li><a href="about.html" data-lang-en="About" data-lang-ua="Про нас">About</a></li>
           <li><a href="games.html" data-lang-en="Games" data-lang-ua="Гри">Games</a></li>
