--- a/index.html
+++ b/index.html
@@ -12,7 +12,8 @@
   <link rel="icon" href="/favicon/favicon-16x16.png" sizes="16x16" type="image/png">
   <link rel="apple-touch-icon" href="/favicon/apple-touch-icon.png">
   <!-- Theme color and MS tile -->
-  <meta name="theme-color" content="#ffffff">
+  <meta name="theme-color" content="#ffffff" media="(prefers-color-scheme: light)">
+  <meta name="theme-color" content="#222222" media="(prefers-color-scheme: dark)">
   <meta name="msapplication-TileColor" content="#ffffff">
   <meta name="msapplication-navbutton-color" content="#ffffff">
   <meta name="color-scheme" content="light dark">
@@ -58,6 +59,7 @@
     <a href="src/pages/games.html" data-lang-en="Games" data-lang-ua="Гри">Games</a> |
     <a href="src/pages/news.html" data-lang-en="News" data-lang-ua="Новини">News</a>
   </footer>
+  <script src="src/scripts/utils.js"></script>
   <script src="main.js"></script>
 </body>
 </html>
