feat(content): add landing content and center/content styles

--- a/src/contents/index-content-en.html
+++ b/src/contents/index-content-en.html
@@ -1,4 +1,28 @@
-<div>
-  <h2>Article Title</h2>
-  <p>This is an article in English.</p>
-</div>
+<section class="hero card">
+  <h2>Welcome to Market Masters</h2>
+  <p class="lead">Trade, learn, and master market dynamics in this light-weight economic simulation.</p>
+  <div class="cta-row">
+    <a class="btn" href="src/pages/games.html" data-lang-en="Play Now" data-lang-ua="Грати">Play Now</a>
+    <a class="btn secondary" href="src/pages/register.html" data-lang-en="Sign Up" data-lang-ua="Реєстрація">Sign Up</a>
+  </div>
+</section>
+
+<section class="features grid" aria-label="features">
+  <article class="card">
+    <h3>Simulate Markets</h3>
+    <p>Run simulated market sessions with dynamic pricing, supply and demand curves, and competitor bots.</p>
+  </article>
+  <article class="card">
+    <h3>Learn Economics</h3>
+    <p>Interactive lessons and challenges help you understand core economic principles while you play.</p>
+  </article>
+  <article class="card">
+    <h3>Compete & Share</h3>
+    <p>Challenge friends, climb leaderboards, and share your strategies.</p>
+  </article>
+</section>
+
+<section class="about card">
+  <h3>About the Project</h3>
+  <p>Market Masters is a small indie project aiming to teach market fundamentals through gameplay. It's open-source and lightweight.</p>
+</section>
