feat(content): add localized content for about,games,news,register,user (EN/UA)

--- a/src/contents/about-content-en.html
+++ b/src/contents/about-content-en.html
@@ -1,4 +1,7 @@
-<div>
-  <h2>About Us</h2>
-  <p>This is the about page content in English.</p>
-</div>
+<section class="card">
+  <h2>About Market Masters</h2>
+  <p class="lead">Market Masters is an educational simulation that teaches market principles through interactive gameplay.</p>
+  <p>We believe learning economics should be hands-on and fun. Our small team focuses on creating clear, lightweight experiences that illustrate supply, demand, and pricing strategies.</p>
+  <h3>Mission</h3>
+  <p>Empower players with practical market knowledge through play and experimentation.</p>
+</section>
