--- a/src/contents/about-content-ua.html
+++ b/src/contents/about-content-ua.html
@@ -1,4 +1,7 @@
-<div>
-  <h2>Про нас</h2>
-  <p>Це контент сторінки "Про нас" українською мовою.</p>
-</div>
+<section class="card">
+  <h2>Про Market Masters</h2>
+  <p class="lead">Market Masters — це навчальний симулятор, який навчає ринковим принципам через інтерактивну гру.</p>
+  <p>Ми віримо, що вивчення економіки має бути практичним і захопливим. Наша невелика команда створює легкі й зрозумілі досвіди, які ілюструють попит, пропозицію та цінові стратегії.</p>
+  <h3>Місія</h3>
+  <p>Надати гравцям практичні знання про ринки через гру та експерименти.</p>
+</section>
