--- a/src/contents/games-content-en.html
+++ b/src/contents/games-content-en.html
@@ -1,4 +1,18 @@
-<div>
-  <h2>Our Games</h2>
-  <p>This is the games page content in English.</p>
-</div>
+<section class="card">
+  <h2>Games & Simulations</h2>
+  <p class="lead">Explore our available simulations designed to teach different aspects of market behavior.</p>
+  <div class="grid">
+    <article class="card">
+      <h3>Market (Core)</h3>
+      <p>Run a market stall, buy low, sell high, and react to changing demand curves.</p>
+    </article>
+    <article class="card">
+      <h3>Supply Chain</h3>
+      <p>Manage suppliers, lead times, and inventory to meet customer demand efficiently.</p>
+    </article>
+    <article class="card">
+      <h3>Auction</h3>
+      <p>Practice bidding strategies in time-limited auctions and discover optimal tactics.</p>
+    </article>
+  </div>
+</section>
