--- a/src/contents/games-content-ua.html
+++ b/src/contents/games-content-ua.html
@@ -1,4 +1,18 @@
-<div>
-  <h2>Наші гри</h2>
-  <p>Це контент сторінки "Наші гри" українською мовою.</p>
-</div>
+<section class="card">
+  <h2>Ігри та симуляції</h2>
+  <p class="lead">Ознайомтеся з нашими симуляціями, які навчають різним аспектам ринкової поведінки.</p>
+  <div class="grid">
+    <article class="card">
+      <h3>Ринок (основний)</h3>
+      <p>Ведіть торгову точку, купуйте дешевше, продавайте дорожче і реагуйте на зміну попиту.</p>
+    </article>
+    <article class="card">
+      <h3>Ланцюг постачань</h3>
+      <p>Керуйте постачальниками, часом доставки та запасами, щоб ефективно задовольняти попит.</p>
+    </article>
+    <article class="card">
+      <h3>Аукціон</h3>
+      <p>Тренуйте стратегії ставок в обмежених за часом аукціонах та знаходьте оптимальні тактики.</p>
+    </article>
+  </div>
+</section>
