--- a/src/contents/news-content-en.html
+++ b/src/contents/news-content-en.html
@@ -1,7 +1,11 @@
-<div>
+<section class="card">
   <h2>Latest News</h2>
   <article>
-    <h2>New Game Release: Market</h2>
-    <p>We are excited to announce the release of our new game, Market. In this game, you will manage your own market, buy and sell goods, and try to make a profit. Start playing now!</p>
+    <h3>New Game Release: Market</h3>
+    <p>We're excited to announce the release of <strong>Market</strong>, our core simulation that lets you run a market stall and explore pricing strategies. Play now to try seasonal scenarios and AI competitors.</p>
   </article>
-</div>
+  <article>
+    <h3>Community Update</h3>
+    <p>We recently added leaderboards and a simple matchmaking system to help you find challenges.</p>
+  </article>
+</section>
