--- a/src/contents/news-content-ua.html
+++ b/src/contents/news-content-ua.html
@@ -1,7 +1,11 @@
-<div>
+<section class="card">
   <h2>Останні новини</h2>
   <article>
-    <h2>Вихід нової гри: Ринок</h2>
-    <p>Ми раді оголосити про вихід нашої нової гри, Ринок. У цій грі ви будете керувати власним ринком, купувати та продавати товари, і намагатися отримати прибуток. Почніть грати зараз!</p>
+    <h3>Вихід нової гри: Ринок</h3>
+    <p>Ми раді представити <strong>Ринок</strong>, нашу основну симуляцію, що дає змогу керувати торговельною точкою та тестувати цінові стратегії. Спробуйте сезонні сценарії та змагання з ботами.</p>
   </article>
-</div>
+  <article>
+    <h3>Оновлення спільноти</h3>
+    <p>Додано таблицю лідерів та просту систему підбору суперників для зручніших викликів.</p>
+  </article>
+</section>
