--- a/src/contents/user-content-en.html
+++ b/src/contents/user-content-en.html
@@ -1,4 +1,14 @@
-<div>
-  <h2>User Page</h2>
-  <p>This is the user page content in English.</p>
-</div>
+<section class="card">
+  <h2>Your Profile</h2>
+  <p class="lead">Welcome back! Here you can see your recent sessions and stats.</p>
+  <div class="grid">
+    <div class="card">
+      <h3>Recent Sessions</h3>
+      <p>No sessions yet. Start a game to see statistics here.</p>
+    </div>
+    <div class="card">
+      <h3>Stats</h3>
+      <p>Level: Newbie<br/>Balance: $0</p>
+    </div>
+  </div>
+</section>
