--- a/src/contents/user-content-ua.html
+++ b/src/contents/user-content-ua.html
@@ -1,4 +1,14 @@
-<div>
-  <h2>Сторінка користувача</h2>
-  <p>Це контент сторінки "Сторінка користувача" українською мовою.</p>
-</div>
+<section class="card">
+  <h2>Ваш профіль</h2>
+  <p class="lead">Ласкаво просимо! Тут ви можете бачити останні сесії та статистику.</p>
+  <div class="grid">
+    <div class="card">
+      <h3>Останні сесії</h3>
+      <p>Поки що немає сесій. Розпочніть гру, щоб побачити статистику.</p>
+    </div>
+    <div class="card">
+      <h3>Статистика</h3>
+      <p>Рівень: Новачок<br/>Баланс: $0</p>
+    </div>
+  </div>
+</section>
