feat(daily): add Daily Challenge MVP (seeded market, UI, local leaderboard)

--- a/src/contents/games-content-en.html
+++ b/src/contents/games-content-en.html
@@ -16,3 +16,19 @@
     </article>
   </div>
 </section>
+<section class="card game-start" aria-label="Start Market">
+  <h2>Start Market Game</h2>
+  <p>Jump into a quick market session to practice trading and strategy.</p>
+  <div class="cta-row">
+    <button id="start-market-game" class="btn">Play Now</button>
+  </div>
+</section>
+
+<section class="card daily-challenge" aria-label="Daily Challenge">
+  <h2>Daily Challenge</h2>
+  <p class="lead">A new deterministic market every day — same market for everyone. Compete for a spot on the local leaderboard.</p>
+  <div class="cta-row">
+    <button id="start-daily-challenge" class="btn" data-action="daily">Start Daily Challenge</button>
+    <a href="#leaderboard" class="btn secondary" id="view-daily-leaderboard">Leaderboard</a>
+  </div>
+</section>
