--- a/src/contents/games-content-ua.html
+++ b/src/contents/games-content-ua.html
@@ -16,3 +16,21 @@
     </article>
   </div>
 </section>
+<section class="card game-start" aria-label="Start Market">
+  <h2>Почати гру Ринок</h2>
+  <p>
+    Розпочніть швидку сесію ринку, щоб потренуватись торгуванню та стратегії.
+  </p>
+  <div class="cta-row">
+    <button id="start-market-game" class="btn" data-lang-en="Play Now" data-lang-ua="Грати">Грати</button>
+  </div>
+</section>
+
+<section class="card daily-challenge" aria-label="Daily Challenge">
+  <h2>Щоденний виклик</h2>
+  <p class="lead">Щодня новий детермінований ринок — однаковий для всіх. Змагайтесь за місце у локальному рейтингу.</p>
+  <div class="cta-row">
+    <button id="start-daily-challenge" class="btn" data-action="daily">Почати щоденний виклик</button>
+    <a href="#leaderboard" class="btn secondary" id="view-daily-leaderboard">Рейтинг</a>
+  </div>
+</section>
