--- a/src/contents/index-content-ua.html
+++ b/src/contents/index-content-ua.html
@@ -1,3 +1,31 @@
+<section class="hero card">
+  <h2>Ласкаво просимо до Market Masters</h2>
+  <p class="lead">Торгуй, вчися та опановуй динаміку ринку в легкій економічній симуляції.</p>
+  <div class="cta-row">
+    <a class="btn" href="src/pages/games.html" data-lang-en="Play Now" data-lang-ua="Грати">Грати</a>
+    <a class="btn secondary" href="src/pages/register.html" data-lang-en="Sign Up" data-lang-ua="Реєстрація">Реєстрація</a>
+  </div>
+</section>
+
+<section class="features grid" aria-label="features">
+  <article class="card">
+    <h3>Симулювати ринки</h3>
+    <p>Проводь сесії ринку з динамічними цінами, кривими попиту і ботами-конкурентами.</p>
+  </article>
+  <article class="card">
+    <h3>Вчити економіку</h3>
+    <p>Інтерактивні уроки й завдання допомагають зрозуміти основи економіки під час гри.</p>
+  </article>
+  <article class="card">
+    <h3>Змагайся та ділись</h3>
+    <p>Кидай виклик друзям, піднімайся у таблицях лідерів та діліться стратегіями.</p>
+  </article>
+</section>
+
+<section class="about card">
+  <h3>Про проєкт</h3>
+  <p>Market Masters — невеликий інді-проєкт, що навчає ринкових основ через гру. Проєкт з відкритим кодом та легкою вагою.</p>
+</section>
 <div>
   <h2>Назва статті</h2>
   <p>Це стаття українською мовою.</p>
