--- a/src/pages/games.html
+++ b/src/pages/games.html
@@ -35,9 +35,6 @@
     <div class="container" id="content">
       <!-- Content will be loaded here -->
     </div>
-    <div class="container">
-      <button id="start-market-game" data-lang-en="Start Market Game" data-lang-ua="Почати гру Ринок">Start Market Game</button>
-    </div>
     
   </main>
   <footer class="footer">
@@ -47,6 +44,7 @@
     <a href="news.html" data-lang-en="News" data-lang-ua="Новини">News</a>
   </footer>
   <script src="../scripts/game.js"></script>
+  <script type="module" src="../scripts/daily-ui.js"></script>
   <script src="../scripts/utils.js"></script>
   <script src="../../main.js"></script>
 </body>
